Project2/y.output
Nonterminals useless in grammar

   Int_Expr


Terminals unused in grammar

   T_Return
   T_Break
   T_Continue


Rules useless in grammar

  124 Int_Expr: Expr


State 182 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Trans_Unit

    2 Pri_Expr: T_Identifier
    3         | T_IntConstant
    4         | T_FloatConstant
    5         | T_BoolConstant
    6         | '(' Expr ')'

    7 Post_Expr: Pri_Expr
    8          | Fn_Call
    9          | Post_Expr '.' T_FieldSelection
   10          | Post_Expr T_Inc
   11          | Post_Expr T_Dec

   12 Fn_Call: Fn_Call_Hdr_No_Param ')'
   13        | Fn_Call_Hdr_With_Param ')'

   14 Fn_Call_Hdr_No_Param: Fn_Call_Hdr T_Void
   15                     | Fn_Call_Hdr

   16 Fn_Call_Hdr_With_Param: Fn_Call_Hdr Assn_Expr
   17                       | Fn_Call_Hdr_With_Param ',' Assn_Expr

   18 Fn_Call_Hdr: Fn_Ident '('

   19 Fn_Ident: Type_Spec
   20         | Post_Expr

   21 Un_Expr: Post_Expr
   22        | T_Inc Un_Expr
   23        | T_Dec Un_Expr
   24        | Un_Op Un_Expr

   25 Un_Op: '+'
   26      | '-'

   27 Mul_Expr: Un_Expr
   28         | Mul_Expr '*' Un_Expr
   29         | Mul_Expr '/' Un_Expr

   30 Add_Expr: Mul_Expr
   31         | Add_Expr '+' Mul_Expr
   32         | Add_Expr '-' Mul_Expr

   33 Rel_Expr: Add_Expr
   34         | Rel_Expr '<' Add_Expr
   35         | Rel_Expr '>' Add_Expr
   36         | Rel_Expr T_LessEqual Add_Expr
   37         | Rel_Expr T_GreaterEqual Add_Expr

   38 Eq_Expr: Rel_Expr
   39        | Eq_Expr T_Equal Rel_Expr
   40        | Eq_Expr T_NotEqual Rel_Expr

   41 Log_And_Expr: Eq_Expr
   42             | Log_And_Expr T_And Eq_Expr

   43 Log_Or_Expr: Log_And_Expr
   44            | Log_Or_Expr T_Or Log_And_Expr

   45 Assn_Expr: Log_Or_Expr
   46          | Un_Expr Assn_Oper Assn_Expr

   47 Assn_Oper: '='
   48          | T_Mul_Assign
   49          | T_Div_Assign
   50          | T_Add_Assign
   51          | T_Sub_Assign

   52 Expr: Assn_Expr

   53 Decl: Fn_Proto ';'
   54     | Single_Decl ';'
   55     | Type_Q T_Identifier ';'

   56 Fn_Proto: Fn_Declr ')'

   57 Fn_Declr: Fn_Hdr
   58         | Fn_Hdr_With_Param

   59 Fn_Hdr_With_Param: Fn_Hdr Param_Decl
   60                  | Fn_Hdr_With_Param ',' Param_Decl

   61 Fn_Hdr: Fully_Spec_Type T_Identifier '('

   62 Param_Declr: Type_Spec T_Identifier

   63 Param_Decl: Param_Declr
   64           | Type_Spec

   65 Single_Decl: Fully_Spec_Type T_Identifier

   66 Fully_Spec_Type: Type_Spec
   67                | Type_Q Type_Spec

   68 Layout_Q: T_Layout '(' Layout_ID_List ')'

   69 Layout_ID_List: Layout_ID

   70 Layout_ID: T_Identifier '=' T_IntConstant

   71 Type_Q: Single_Type_Q
   72       | Type_Q Single_Type_Q

   73 Single_Type_Q: Storage_Q
   74              | Layout_Q

   75 Storage_Q: T_In
   76          | T_Out
   77          | T_Uniform

   78 Type_Spec: T_Void
   79          | T_Float
   80          | T_Int
   81          | T_Bool
   82          | T_Vec2
   83          | T_Vec3
   84          | T_Vec4
   85          | T_Mat2
   86          | T_Mat3
   87          | T_Mat4

   88 Decl_Stmt: Decl

   89 Stmt: Compd_Stmt
   90     | Simple_Stmt

   91 Simple_Stmt: Decl_Stmt
   92            | Expr_Stmt
   93            | Select_Stmt
   94            | Switch_Stmt
   95            | Case_Label
   96            | Iter_Stmt

   97 Compd_Stmt: '{' '}'
   98           | '{' Stmt_List '}'

   99 Stmt_List: Stmt
  100          | Stmt_List Stmt

  101 Expr_Stmt: ';'
  102          | Expr ';'

  103 Select_Stmt: T_If '(' Expr ')' Select_Rest_Stmt

  104 Select_Rest_Stmt: Stmt T_Else Stmt
  105                 | Stmt

  106 Cond: Expr
  107     | Fully_Spec_Type T_Identifier T_Equal Assn_Expr

  108 Switch_Stmt: T_Switch '(' Expr ')' '{' Switch_Stmt_List '}'
  109            | T_Switch '(' Expr ')' '{' '}'

  110 Switch_Stmt_List: Stmt_List

  111 Case_Label: T_Case Expr ':'
  112           | T_Default ':'

  113 Iter_Stmt: T_While '(' Cond ')' Stmt
  114          | T_For '(' For_Init_Stmt For_Rest_Stmt ')' Stmt

  115 For_Init_Stmt: Expr_Stmt
  116              | Decl_Stmt

  117 For_Rest_Stmt: Cond ';'
  118              | Cond ';' Expr

  119 Trans_Unit: Trans_Unit Ext_Decl
  120           | Ext_Decl

  121 Ext_Decl: Fn_Def
  122         | Decl

  123 Fn_Def: Fn_Proto Compd_Stmt


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 18 61 68 103 108 109 113 114
')' (41) 6 12 13 56 68 103 108 109 113 114
'*' (42) 28
'+' (43) 25 31
',' (44) 17 60
'-' (45) 26 32
'.' (46) 9
'/' (47) 29
':' (58) 111 112
';' (59) 53 54 55 101 102 117 118
'<' (60) 34
'=' (61) 47 70
'>' (62) 35
'{' (123) 97 98 108 109
'}' (125) 97 98 108 109
error (256)
T_Void (258) 14 78
T_Bool (259) 81
T_Int (260) 80
T_Float (261) 79
T_Vec2 (262) 82
T_Vec3 (263) 83
T_Vec4 (264) 84
T_Mat2 (265) 85
T_Mat3 (266) 86
T_Mat4 (267) 87
T_FieldSelection (268) 9
T_In (269) 75
T_Out (270) 76
T_Uniform (271) 77
T_Layout (272) 68
T_LessEqual (273) 36
T_GreaterEqual (274) 37
T_Equal (275) 39 107
T_NotEqual (276) 40
T_And (277) 42
T_Or (278) 44
T_While (279) 113
T_For (280) 114
T_If (281) 103
T_Else (282) 104
T_Return (283)
T_Break (284)
T_Continue (285)
T_Inc (286) 10 22
T_Dec (287) 11 23
T_Switch (288) 108 109
T_Case (289) 111
T_Default (290) 112
T_Mul_Assign (291) 48
T_Div_Assign (292) 49
T_Add_Assign (293) 50
T_Sub_Assign (294) 51
T_Identifier (295) 2 55 61 62 65 70 107
T_IntConstant (296) 3 70
T_FloatConstant (297) 4
T_BoolConstant (298) 5


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
Program (60)
    on left: 1, on right: 0
Pri_Expr (61)
    on left: 2 3 4 5 6, on right: 7
Post_Expr (62)
    on left: 7 8 9 10 11, on right: 9 10 11 20 21
Fn_Call (63)
    on left: 12 13, on right: 8
Fn_Call_Hdr_No_Param (64)
    on left: 14 15, on right: 12
Fn_Call_Hdr_With_Param (65)
    on left: 16 17, on right: 13 17
Fn_Call_Hdr (66)
    on left: 18, on right: 14 15 16
Fn_Ident (67)
    on left: 19 20, on right: 18
Un_Expr (68)
    on left: 21 22 23 24, on right: 22 23 24 27 28 29 46
Un_Op (69)
    on left: 25 26, on right: 24
Mul_Expr (70)
    on left: 27 28 29, on right: 28 29 30 31 32
Add_Expr (71)
    on left: 30 31 32, on right: 31 32 33 34 35 36 37
Rel_Expr (72)
    on left: 33 34 35 36 37, on right: 34 35 36 37 38 39 40
Eq_Expr (73)
    on left: 38 39 40, on right: 39 40 41 42
Log_And_Expr (74)
    on left: 41 42, on right: 42 43 44
Log_Or_Expr (75)
    on left: 43 44, on right: 44 45
Assn_Expr (76)
    on left: 45 46, on right: 16 17 46 52 107
Assn_Oper (77)
    on left: 47 48 49 50 51, on right: 46
Expr (78)
    on left: 52, on right: 6 102 103 106 108 109 111 118
Decl (79)
    on left: 53 54 55, on right: 88 122
Fn_Proto (80)
    on left: 56, on right: 53 123
Fn_Declr (81)
    on left: 57 58, on right: 56
Fn_Hdr_With_Param (82)
    on left: 59 60, on right: 58 60
Fn_Hdr (83)
    on left: 61, on right: 57 59
Param_Declr (84)
    on left: 62, on right: 63
Param_Decl (85)
    on left: 63 64, on right: 59 60
Single_Decl (86)
    on left: 65, on right: 54
Fully_Spec_Type (87)
    on left: 66 67, on right: 61 65 107
Layout_Q (88)
    on left: 68, on right: 74
Layout_ID_List (89)
    on left: 69, on right: 68
Layout_ID (90)
    on left: 70, on right: 69
Type_Q (91)
    on left: 71 72, on right: 55 67 72
Single_Type_Q (92)
    on left: 73 74, on right: 71 72
Storage_Q (93)
    on left: 75 76 77, on right: 73
Type_Spec (94)
    on left: 78 79 80 81 82 83 84 85 86 87, on right: 19 62 64 66 67
Decl_Stmt (95)
    on left: 88, on right: 91 116
Stmt (96)
    on left: 89 90, on right: 99 100 104 105 113 114
Simple_Stmt (97)
    on left: 91 92 93 94 95 96, on right: 90
Compd_Stmt (98)
    on left: 97 98, on right: 89 123
Stmt_List (99)
    on left: 99 100, on right: 98 100 110
Expr_Stmt (100)
    on left: 101 102, on right: 92 115
Select_Stmt (101)
    on left: 103, on right: 93
Select_Rest_Stmt (102)
    on left: 104 105, on right: 103
Cond (103)
    on left: 106 107, on right: 113 117 118
Switch_Stmt (104)
    on left: 108 109, on right: 94
Switch_Stmt_List (105)
    on left: 110, on right: 108
Case_Label (106)
    on left: 111 112, on right: 95
Iter_Stmt (107)
    on left: 113 114, on right: 96
For_Init_Stmt (108)
    on left: 115 116, on right: 114
For_Rest_Stmt (109)
    on left: 117 118, on right: 114
Trans_Unit (110)
    on left: 119 120, on right: 1 119
Ext_Decl (111)
    on left: 121 122, on right: 119 120
Fn_Def (112)
    on left: 123, on right: 121


state 0

    0 $accept: . Program $end

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Int      shift, and go to state 3
    T_Float    shift, and go to state 4
    T_Vec2     shift, and go to state 5
    T_Vec3     shift, and go to state 6
    T_Vec4     shift, and go to state 7
    T_Mat2     shift, and go to state 8
    T_Mat3     shift, and go to state 9
    T_Mat4     shift, and go to state 10
    T_In       shift, and go to state 11
    T_Out      shift, and go to state 12
    T_Uniform  shift, and go to state 13
    T_Layout   shift, and go to state 14

    Program            go to state 15
    Decl               go to state 16
    Fn_Proto           go to state 17
    Fn_Declr           go to state 18
    Fn_Hdr_With_Param  go to state 19
    Fn_Hdr             go to state 20
    Single_Decl        go to state 21
    Fully_Spec_Type    go to state 22
    Layout_Q           go to state 23
    Type_Q             go to state 24
    Single_Type_Q      go to state 25
    Storage_Q          go to state 26
    Type_Spec          go to state 27
    Trans_Unit         go to state 28
    Ext_Decl           go to state 29
    Fn_Def             go to state 30


state 1

   78 Type_Spec: T_Void .

    $default  reduce using rule 78 (Type_Spec)


state 2

   81 Type_Spec: T_Bool .

    $default  reduce using rule 81 (Type_Spec)


state 3

   80 Type_Spec: T_Int .

    $default  reduce using rule 80 (Type_Spec)


state 4

   79 Type_Spec: T_Float .

    $default  reduce using rule 79 (Type_Spec)


state 5

   82 Type_Spec: T_Vec2 .

    $default  reduce using rule 82 (Type_Spec)


state 6

   83 Type_Spec: T_Vec3 .

    $default  reduce using rule 83 (Type_Spec)


state 7

   84 Type_Spec: T_Vec4 .

    $default  reduce using rule 84 (Type_Spec)


state 8

   85 Type_Spec: T_Mat2 .

    $default  reduce using rule 85 (Type_Spec)


state 9

   86 Type_Spec: T_Mat3 .

    $default  reduce using rule 86 (Type_Spec)


state 10

   87 Type_Spec: T_Mat4 .

    $default  reduce using rule 87 (Type_Spec)


state 11

   75 Storage_Q: T_In .

    $default  reduce using rule 75 (Storage_Q)


state 12

   76 Storage_Q: T_Out .

    $default  reduce using rule 76 (Storage_Q)


state 13

   77 Storage_Q: T_Uniform .

    $default  reduce using rule 77 (Storage_Q)


state 14

   68 Layout_Q: T_Layout . '(' Layout_ID_List ')'

    '('  shift, and go to state 31


state 15

    0 $accept: Program . $end

    $end  shift, and go to state 32


state 16

  122 Ext_Decl: Decl .

    $default  reduce using rule 122 (Ext_Decl)


state 17

   53 Decl: Fn_Proto . ';'
  123 Fn_Def: Fn_Proto . Compd_Stmt

    ';'  shift, and go to state 33
    '{'  shift, and go to state 34

    Compd_Stmt  go to state 35


state 18

   56 Fn_Proto: Fn_Declr . ')'

    ')'  shift, and go to state 36


state 19

   58 Fn_Declr: Fn_Hdr_With_Param .
   60 Fn_Hdr_With_Param: Fn_Hdr_With_Param . ',' Param_Decl

    ','  shift, and go to state 37

    $default  reduce using rule 58 (Fn_Declr)


state 20

   57 Fn_Declr: Fn_Hdr .
   59 Fn_Hdr_With_Param: Fn_Hdr . Param_Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    $default  reduce using rule 57 (Fn_Declr)

    Param_Declr  go to state 38
    Param_Decl   go to state 39
    Type_Spec    go to state 40


state 21

   54 Decl: Single_Decl . ';'

    ';'  shift, and go to state 41


state 22

   61 Fn_Hdr: Fully_Spec_Type . T_Identifier '('
   65 Single_Decl: Fully_Spec_Type . T_Identifier

    T_Identifier  shift, and go to state 42


state 23

   74 Single_Type_Q: Layout_Q .

    $default  reduce using rule 74 (Single_Type_Q)


state 24

   55 Decl: Type_Q . T_Identifier ';'
   67 Fully_Spec_Type: Type_Q . Type_Spec
   72 Type_Q: Type_Q . Single_Type_Q

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Float       shift, and go to state 4
    T_Vec2        shift, and go to state 5
    T_Vec3        shift, and go to state 6
    T_Vec4        shift, and go to state 7
    T_Mat2        shift, and go to state 8
    T_Mat3        shift, and go to state 9
    T_Mat4        shift, and go to state 10
    T_In          shift, and go to state 11
    T_Out         shift, and go to state 12
    T_Uniform     shift, and go to state 13
    T_Layout      shift, and go to state 14
    T_Identifier  shift, and go to state 43

    Layout_Q       go to state 23
    Single_Type_Q  go to state 44
    Storage_Q      go to state 26
    Type_Spec      go to state 45


state 25

   71 Type_Q: Single_Type_Q .

    $default  reduce using rule 71 (Type_Q)


state 26

   73 Single_Type_Q: Storage_Q .

    $default  reduce using rule 73 (Single_Type_Q)


state 27

   66 Fully_Spec_Type: Type_Spec .

    $default  reduce using rule 66 (Fully_Spec_Type)


state 28

    1 Program: Trans_Unit .
  119 Trans_Unit: Trans_Unit . Ext_Decl

    T_Void     shift, and go to state 1
    T_Bool     shift, and go to state 2
    T_Int      shift, and go to state 3
    T_Float    shift, and go to state 4
    T_Vec2     shift, and go to state 5
    T_Vec3     shift, and go to state 6
    T_Vec4     shift, and go to state 7
    T_Mat2     shift, and go to state 8
    T_Mat3     shift, and go to state 9
    T_Mat4     shift, and go to state 10
    T_In       shift, and go to state 11
    T_Out      shift, and go to state 12
    T_Uniform  shift, and go to state 13
    T_Layout   shift, and go to state 14

    $default  reduce using rule 1 (Program)

    Decl               go to state 16
    Fn_Proto           go to state 17
    Fn_Declr           go to state 18
    Fn_Hdr_With_Param  go to state 19
    Fn_Hdr             go to state 20
    Single_Decl        go to state 21
    Fully_Spec_Type    go to state 22
    Layout_Q           go to state 23
    Type_Q             go to state 24
    Single_Type_Q      go to state 25
    Storage_Q          go to state 26
    Type_Spec          go to state 27
    Ext_Decl           go to state 46
    Fn_Def             go to state 30


state 29

  120 Trans_Unit: Ext_Decl .

    $default  reduce using rule 120 (Trans_Unit)


state 30

  121 Ext_Decl: Fn_Def .

    $default  reduce using rule 121 (Ext_Decl)


state 31

   68 Layout_Q: T_Layout '(' . Layout_ID_List ')'

    T_Identifier  shift, and go to state 47

    Layout_ID_List  go to state 48
    Layout_ID       go to state 49


state 32

    0 $accept: Program $end .

    $default  accept


state 33

   53 Decl: Fn_Proto ';' .

    $default  reduce using rule 53 (Decl)


state 34

   97 Compd_Stmt: '{' . '}'
   98           | '{' . Stmt_List '}'

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_In             shift, and go to state 11
    T_Out            shift, and go to state 12
    T_Uniform        shift, and go to state 13
    T_Layout         shift, and go to state 14
    T_While          shift, and go to state 50
    T_For            shift, and go to state 51
    T_If             shift, and go to state 52
    T_Inc            shift, and go to state 53
    T_Dec            shift, and go to state 54
    T_Switch         shift, and go to state 55
    T_Case           shift, and go to state 56
    T_Default        shift, and go to state 57
    T_Identifier     shift, and go to state 58
    T_IntConstant    shift, and go to state 59
    T_FloatConstant  shift, and go to state 60
    T_BoolConstant   shift, and go to state 61
    '('              shift, and go to state 62
    '+'              shift, and go to state 63
    '-'              shift, and go to state 64
    ';'              shift, and go to state 65
    '{'              shift, and go to state 34
    '}'              shift, and go to state 66

    Pri_Expr                go to state 67
    Post_Expr               go to state 68
    Fn_Call                 go to state 69
    Fn_Call_Hdr_No_Param    go to state 70
    Fn_Call_Hdr_With_Param  go to state 71
    Fn_Call_Hdr             go to state 72
    Fn_Ident                go to state 73
    Un_Expr                 go to state 74
    Un_Op                   go to state 75
    Mul_Expr                go to state 76
    Add_Expr                go to state 77
    Rel_Expr                go to state 78
    Eq_Expr                 go to state 79
    Log_And_Expr            go to state 80
    Log_Or_Expr             go to state 81
    Assn_Expr               go to state 82
    Expr                    go to state 83
    Decl                    go to state 84
    Fn_Proto                go to state 85
    Fn_Declr                go to state 18
    Fn_Hdr_With_Param       go to state 19
    Fn_Hdr                  go to state 20
    Single_Decl             go to state 21
    Fully_Spec_Type         go to state 22
    Layout_Q                go to state 23
    Type_Q                  go to state 24
    Single_Type_Q           go to state 25
    Storage_Q               go to state 26
    Type_Spec               go to state 86
    Decl_Stmt               go to state 87
    Stmt                    go to state 88
    Simple_Stmt             go to state 89
    Compd_Stmt              go to state 90
    Stmt_List               go to state 91
    Expr_Stmt               go to state 92
    Select_Stmt             go to state 93
    Switch_Stmt             go to state 94
    Case_Label              go to state 95
    Iter_Stmt               go to state 96


state 35

  123 Fn_Def: Fn_Proto Compd_Stmt .

    $default  reduce using rule 123 (Fn_Def)


state 36

   56 Fn_Proto: Fn_Declr ')' .

    $default  reduce using rule 56 (Fn_Proto)


state 37

   60 Fn_Hdr_With_Param: Fn_Hdr_With_Param ',' . Param_Decl

    T_Void   shift, and go to state 1
    T_Bool   shift, and go to state 2
    T_Int    shift, and go to state 3
    T_Float  shift, and go to state 4
    T_Vec2   shift, and go to state 5
    T_Vec3   shift, and go to state 6
    T_Vec4   shift, and go to state 7
    T_Mat2   shift, and go to state 8
    T_Mat3   shift, and go to state 9
    T_Mat4   shift, and go to state 10

    Param_Declr  go to state 38
    Param_Decl   go to state 97
    Type_Spec    go to state 40


state 38

   63 Param_Decl: Param_Declr .

    $default  reduce using rule 63 (Param_Decl)


state 39

   59 Fn_Hdr_With_Param: Fn_Hdr Param_Decl .

    $default  reduce using rule 59 (Fn_Hdr_With_Param)


state 40

   62 Param_Declr: Type_Spec . T_Identifier
   64 Param_Decl: Type_Spec .

    T_Identifier  shift, and go to state 98

    $default  reduce using rule 64 (Param_Decl)


state 41

   54 Decl: Single_Decl ';' .

    $default  reduce using rule 54 (Decl)


state 42

   61 Fn_Hdr: Fully_Spec_Type T_Identifier . '('
   65 Single_Decl: Fully_Spec_Type T_Identifier .

    '('  shift, and go to state 99

    $default  reduce using rule 65 (Single_Decl)


state 43

   55 Decl: Type_Q T_Identifier . ';'

    ';'  shift, and go to state 100


state 44

   72 Type_Q: Type_Q Single_Type_Q .

    $default  reduce using rule 72 (Type_Q)


state 45

   67 Fully_Spec_Type: Type_Q Type_Spec .

    $default  reduce using rule 67 (Fully_Spec_Type)


state 46

  119 Trans_Unit: Trans_Unit Ext_Decl .

    $default  reduce using rule 119 (Trans_Unit)


state 47

   70 Layout_ID: T_Identifier . '=' T_IntConstant

    '='  shift, and go to state 101


state 48

   68 Layout_Q: T_Layout '(' Layout_ID_List . ')'

    ')'  shift, and go to state 102


state 49

   69 Layout_ID_List: Layout_ID .

    $default  reduce using rule 69 (Layout_ID_List)


state 50

  113 Iter_Stmt: T_While . '(' Cond ')' Stmt

    '('  shift, and go to state 103


state 51

  114 Iter_Stmt: T_For . '(' For_Init_Stmt For_Rest_Stmt ')' Stmt

    '('  shift, and go to state 104


state 52

  103 Select_Stmt: T_If . '(' Expr ')' Select_Rest_Stmt

    '('  shift, and go to state 105


state 53

   22 Un_Expr: T_Inc . Un_Expr

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Inc            shift, and go to state 53
    T_Dec            shift, and go to state 54
    T_Identifier     shift, and go to state 58
    T_IntConstant    shift, and go to state 59
    T_FloatConstant  shift, and go to state 60
    T_BoolConstant   shift, and go to state 61
    '('              shift, and go to state 62
    '+'              shift, and go to state 63
    '-'              shift, and go to state 64

    Pri_Expr                go to state 67
    Post_Expr               go to state 68
    Fn_Call                 go to state 69
    Fn_Call_Hdr_No_Param    go to state 70
    Fn_Call_Hdr_With_Param  go to state 71
    Fn_Call_Hdr             go to state 72
    Fn_Ident                go to state 73
    Un_Expr                 go to state 106
    Un_Op                   go to state 75
    Type_Spec               go to state 107


state 54

   23 Un_Expr: T_Dec . Un_Expr

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Inc            shift, and go to state 53
    T_Dec            shift, and go to state 54
    T_Identifier     shift, and go to state 58
    T_IntConstant    shift, and go to state 59
    T_FloatConstant  shift, and go to state 60
    T_BoolConstant   shift, and go to state 61
    '('              shift, and go to state 62
    '+'              shift, and go to state 63
    '-'              shift, and go to state 64

    Pri_Expr                go to state 67
    Post_Expr               go to state 68
    Fn_Call                 go to state 69
    Fn_Call_Hdr_No_Param    go to state 70
    Fn_Call_Hdr_With_Param  go to state 71
    Fn_Call_Hdr             go to state 72
    Fn_Ident                go to state 73
    Un_Expr                 go to state 108
    Un_Op                   go to state 75
    Type_Spec               go to state 107


state 55

  108 Switch_Stmt: T_Switch . '(' Expr ')' '{' Switch_Stmt_List '}'
  109            | T_Switch . '(' Expr ')' '{' '}'

    '('  shift, and go to state 109


state 56

  111 Case_Label: T_Case . Expr ':'

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Inc            shift, and go to state 53
    T_Dec            shift, and go to state 54
    T_Identifier     shift, and go to state 58
    T_IntConstant    shift, and go to state 59
    T_FloatConstant  shift, and go to state 60
    T_BoolConstant   shift, and go to state 61
    '('              shift, and go to state 62
    '+'              shift, and go to state 63
    '-'              shift, and go to state 64

    Pri_Expr                go to state 67
    Post_Expr               go to state 68
    Fn_Call                 go to state 69
    Fn_Call_Hdr_No_Param    go to state 70
    Fn_Call_Hdr_With_Param  go to state 71
    Fn_Call_Hdr             go to state 72
    Fn_Ident                go to state 73
    Un_Expr                 go to state 74
    Un_Op                   go to state 75
    Mul_Expr                go to state 76
    Add_Expr                go to state 77
    Rel_Expr                go to state 78
    Eq_Expr                 go to state 79
    Log_And_Expr            go to state 80
    Log_Or_Expr             go to state 81
    Assn_Expr               go to state 82
    Expr                    go to state 110
    Type_Spec               go to state 107


state 57

  112 Case_Label: T_Default . ':'

    ':'  shift, and go to state 111


state 58

    2 Pri_Expr: T_Identifier .

    $default  reduce using rule 2 (Pri_Expr)


state 59

    3 Pri_Expr: T_IntConstant .

    $default  reduce using rule 3 (Pri_Expr)


state 60

    4 Pri_Expr: T_FloatConstant .

    $default  reduce using rule 4 (Pri_Expr)


state 61

    5 Pri_Expr: T_BoolConstant .

    $default  reduce using rule 5 (Pri_Expr)


state 62

    6 Pri_Expr: '(' . Expr ')'

    T_Void           shift, and go to state 1
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Inc            shift, and go to state 53
    T_Dec            shift, and go to state 54
    T_Identifier     shift, and go to state 58
    T_IntConstant    shift, and go to state 59
    T_FloatConstant  shift, and go to state 60
    T_BoolConstant   shift, and go to state 61
    '('              shift, and go to state 62
    '+'              shift, and go to state 63
    '-'              shift, and go to state 64

    Pri_Expr                go to state 67
    Post_Expr               go to state 68
    Fn_Call                 go to state 69
    Fn_Call_Hdr_No_Param    go to state 70
    Fn_Call_Hdr_With_Param  go to state 71
    Fn_Call_Hdr             go to state 72
    Fn_Ident                go to state 73
    Un_Expr                 go to state 74
    Un_Op                   go to state 75
    Mul_Expr                go to state 76
    Add_Expr                go to state 77
    Rel_Expr                go to state 78
    Eq_Expr                 go to state 79
    Log_And_Expr            go to state 80
    Log_Or_Expr             go to state 81
    Assn_Expr               go to state 82
    Expr                    go to state 112
    Type_Spec               go to state 107


state 63

   25 Un_Op: '+' .

    $default  reduce using rule 25 (Un_Op)


state 64

   26 Un_Op: '-' .

    $default  reduce using rule 26 (Un_Op)


state 65

  101 Expr_Stmt: ';' .

    $default  reduce using rule 101 (Expr_Stmt)


state 66

   97 Compd_Stmt: '{' '}' .

    $default  reduce using rule 97 (Compd_Stmt)


state 67

    7 Post_Expr: Pri_Expr .

    $default  reduce using rule 7 (Post_Expr)


state 68

    9 Post_Expr: Post_Expr . '.' T_FieldSelection
   10          | Post_Expr . T_Inc
   11          | Post_Expr . T_Dec
   20 Fn_Ident: Post_Expr .
   21 Un_Expr: Post_Expr .

    T_Inc  shift, and go to state 113
    T_Dec  shift, and go to state 114
    '.'    shift, and go to state 115

    '('       reduce using rule 20 (Fn_Ident)
    $default  reduce using rule 21 (Un_Expr)


state 69

    8 Post_Expr: Fn_Call .

    $default  reduce using rule 8 (Post_Expr)


state 70

   12 Fn_Call: Fn_Call_Hdr_No_Param . ')'

    ')'  shift, and go to state 116


state 71

   13 Fn_Call: Fn_Call_Hdr_With_Param . ')'
   17 Fn_Call_Hdr_With_Param: Fn_Call_Hdr_With_Param . ',' Assn_Expr

    ')'  shift, and go to state 117
    ','  shift, and go to state 118


state 72

   14 Fn_Call_Hdr_No_Param: Fn_Call_Hdr . T_Void
   15                     | Fn_Call_Hdr .
   16 Fn_Call_Hdr_With_Param: Fn_Call_Hdr . Assn_Expr

    T_Void           shift, and go to state 119
    T_Bool           shift, and go to state 2
    T_Int            shift, and go to state 3
    T_Float          shift, and go to state 4
    T_Vec2           shift, and go to state 5
    T_Vec3           shift, and go to state 6
    T_Vec4           shift, and go to state 7
    T_Mat2           shift, and go to state 8
    T_Mat3           shift, and go to state 9
    T_Mat4           shift, and go to state 10
    T_Inc            shift, and go to state 53
    T_Dec            shift, and go to state 54
    T_Identifier     shift, and go to state 58
    T_IntConstant    shift, and go to state 59
    T_FloatConstant  shift, and go to state 60
    T_BoolConstant   shift, and go to state 61
    '('              shift, and go to state 62
    '+'              shift, and go to state 63
    '-'              shift, and go to state 64

    $default  reduce using rule 15 (Fn_Call_Hdr_No_Param)

    Pri_Expr                go to state 67
    Post_Expr               go to state 68
    Fn_Call                 go to state 69
    Fn_Call_Hdr_No_Param    go to state 70
    Fn_Call_Hdr_With_Param  go to state 71
    Fn_Call_Hdr             go to state 72
    Fn_Ident                go to state 73
    Un_Expr                 go to state 74
    Un_Op                   go to state 75
    Mul_Expr                go to state 76
    Add_Expr                go to state 77
    Rel_Expr                go to state 78
    Eq_Expr                 go to state 79
    Log_And_Expr            go to state 80
    Log_Or_Expr             go to state 81
    Assn_Expr               go to state 120
    Type_Spec               go to state 107


state 73

   18 Fn_Call_Hdr: Fn_Ident . '('

    '('  shift, and go to state 121


state 74

   27 Mul_Expr: Un_Expr .
   46 Assn_Expr: Un_Expr . Assn_Oper Assn_Expr

    T_Mul_Assign  shift, and go to state 122
    T_Div_Assign  shift, and go to state 123
    T_Add_Assign  shift, and go to state 124
    T_Sub_Assign  shift, and go to state 125
    '='           shift, and go to state 126

    $default  reduce using rule 27 (Mul_Expr)

    Assn_Oper  go to state 127


state 75

   24 Un_Expr: Un_Op . Un_Expr
